syntax = "proto3";

enum PB_Mode {
    CTRL_MODE_STOP = 0;
    CTRL_MODE_IDLE = 1;
    CTRL_MODE_BLOCKED = 2;
    CTRL_MODE_RUNNING = 3;
    CTRL_MODE_RUNNING_SPEED = 4;
    CTRL_MODE_PASSTHROUGH = 5;
    CTRL_MODE_NUMOF = 6;
}
